hydran-166: Apptest for mailboxes
